<?xml version="1.0"?>
<package format="2">
  <name>pomdp_hrs_planner</name>
  <version>0.0.0</version>
  <description>The pomdp-hrs-planner package</description>

  <maintainer email="frano@todo.todo">frano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
